# minerU-exps

./: .gitignore  README.md  data.csv  find_contract.ipynb  ocr_documents.sh  prepare-data.py  pyproject.toml
documents/D-2020-00005018/D-2020-00005018/auto/: D-2020-00005018.md  D-2020-00005018_content_list.json  D-2020-00005018_middle.json  D-2020-00005018_model.json
documents/D-2020-00040677/D-2020-00040677/auto/: D-2020-00040677.md  D-2020-00040677_content_list.json  D-2020-00040677_middle.json  D-2020-00040677_model.json
documents/D-2020-00047813/D-2020-00047813/auto/: D-2020-00047813.md  D-2020-00047813_content_list.json  D-2020-00047813_middle.json  D-2020-00047813_model.json
documents/D-2020-00150874/D-2020-00150874/auto/: D-2020-00150874.md  D-2020-00150874_content_list.json  D-2020-00150874_middle.json  D-2020-00150874_model.json
documents/D-2020-00213476/D-2020-00213476/auto/: D-2020-00213476.md  D-2020-00213476_content_list.json  D-2020-00213476_middle.json  D-2020-00213476_model.json
documents/D-2020-00314079/D-2020-00314079/auto/: D-2020-00314079.md  D-2020-00314079_content_list.json  D-2020-00314079_middle.json  D-2020-00314079_model.json
documents/D-2020-00400144/D-2020-00400144/auto/: D-2020-00400144.md  D-2020-00400144_content_list.json  D-2020-00400144_middle.json  D-2020-00400144_model.json
documents/D-2020-00400146/D-2020-00400146/auto/: D-2020-00400146.md  D-2020-00400146_content_list.json  D-2020-00400146_middle.json  D-2020-00400146_model.json
documents/D-2020-00545991/D-2020-00545991/auto/: D-2020-00545991.md  (+3 more)
(+4 files in other folders)
